# DMP_pypi_poc

./: .gitignore  .readthedocs.yaml  ARCHITECTURE_MULTI_BACKEND.md  MANIFEST.in  MULTI_BACKEND_IMPLEMENTATION.md  PACKAGE_SUMMARY.md  PYPI_READINESS.md  README.md  README_RTD.md  UNUSED_VARIABLES_ANALYSIS.md  data_quality_rules.csv  pyproject.toml  requirements.txt  setup.py  test_config.json
.github/workflows/: python-package.yml
datamanagement_genai/: __init__.py  benchmark.py  config.py  helpers.py  jupyter_helpers.py  logging_config.py  reporting.py
datamanagement_genai/cli/: __init__.py
datamanagement_genai/data_quality/: __init__.py  rules_manager.py
datamanagement_genai/rag/: __init__.py  config.py  system.py
datamanagement_genai/rag/backends/: __init__.py  base.py  chromadb_backend.py  factory.py  faiss_backend.py  local_storage.py  qdrant_backend.py  snowflake.py
docs/: conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst
docs/api/: index.rst
examples/: README.md  data_quality_rules.csv  jupyter_example.ipynb
tests/: __init__.py  conftest.py  test_config.py  test_helpers.py  test_imports.py  test_rag_backends.py
venv_312/: pyvenv.cfg
