[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datamanagement-genai"
version = "0.1.0"
description = "Snowflake Cortex AI Model Benchmarking and Data Quality Management Tool"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Data Management Team"}
]
keywords = ["snowflake", "cortex", "ai", "llm", "benchmarking", "data-quality", "rag", "vector-store"]
project-urls = {
    "Homepage" = "https://github.com/YavinOwens/DMP_pypi_poc",
    "Repository" = "https://github.com/YavinOwens/DMP_pypi_poc",
    "Issues" = "https://github.com/YavinOwens/DMP_pypi_poc/issues"
}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=1.5.0",
    "snowflake-connector-python>=4.1.0",
    "snowflake-snowpark-python>=1.44.0",
    "python-docx>=1.1.0",
]
[project.optional-dependencies]
rag = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "pypdf>=3.0.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.scripts]
datamanagement-genai = "datamanagement_genai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["datamanagement_genai*"]

[tool.setuptools.package-data]
datamanagement_genai = ["*.json"]
