[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datamanagement-genai"
version = "0.1.3"
description = "Snowflake Cortex AI Model Benchmarking and Data Quality Management Tool"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Yavin.O"}
]
keywords = ["snowflake", "cortex", "ai", "llm", "benchmarking", "data-quality", "rag", "vector-store"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=1.5.0",
    "snowflake-connector-python>=4.1.0",
    "snowflake-snowpark-python>=1.44.0",
    "python-docx>=1.1.0",
]
[project.optional-dependencies]
rag = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.1.0",
    "pypdf>=3.0.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
]
benchmark = [
    "tiktoken>=0.5.0",
    "great-expectations>=0.18.0",
]
qdrant = [
    "qdrant-client>=1.7.0",
]
chromadb = [
    "chromadb>=0.4.0",
]
faiss = [
    "faiss-cpu>=1.7.4; sys_platform != 'darwin'",
    "faiss-cpu>=1.7.4; sys_platform == 'darwin'",
]
local-embeddings = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
all = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.1.0",
    "pypdf>=3.0.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "tiktoken>=0.5.0",
    "great-expectations>=0.18.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "qdrant-client>=1.7.0",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/YavinOwens/DMP_pypi_poc"
Repository = "https://github.com/YavinOwens/DMP_pypi_poc"
Documentation = "https://dmp-pypi-poc.readthedocs.io/en/latest/index.html"
Issues = "https://github.com/YavinOwens/DMP_pypi_poc/issues"

[project.scripts]
datamanagement-genai = "datamanagement_genai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["datamanagement_genai*"]

[tool.setuptools.package-data]
datamanagement_genai = ["*.json"]
